concord_macros/tests/trybuild/fail/codegen_contract/compatibility_argument_type.rs
const _: () = concord_core::__private::assert_macro_core_compatibility(());

fn main() {}
