concord_macros/tests/trybuild/fail/codegen_contract/compatibility_argument_type.stderr
error[E0308]: mismatched types
 --> tests/trybuild/fail/codegen_contract/compatibility_argument_type.rs:1:72
  |
1 | const _: () = concord_core::__private::assert_macro_core_compatibility(());
  |               -------------------------------------------------------- ^^ expected `ReqwestNativeGeneratedContract`, found `()`
  |               |
  |               arguments to this function are incorrect
  |
note: function defined here
 --> $WORKSPACE/concord_core/src/__private/mod.rs
  |
  | pub const fn assert_macro_core_compatibility(_: ReqwestNativeGeneratedContract) {}
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
